modified:   index.html

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ behavior of intelligent systems.">
         </button>
       </div>
       <div class="works-list">
-        <a href="https://ieeexplore.ieee.org/document/10846151" class="work-item" target="_blank">
+        <a href="https://github.com/JBKing514/map_blog/blob/main/explore_map/origin.md" class="work-item" target="_blank">
           <div class="work-info">
             <h5>Origin Story</h5>
             <p>How MAP emerged from years of cross-disciplinary thinking and failed attempts at explaining cognition.</p>
@@ -263,7 +263,7 @@ behavior of intelligent systems.">
           </div>
           <i class="fas fa-external-link-alt"></i>
         </a>
-        <a href="https://ieeexplore.ieee.org/document/9786448" class="work-item" target="_blank">
+        <a href="https://github.com/JBKing514/map_blog/blob/main/explore_map/faq.md" class="work-item" target="_blank">
           <div class="work-info">
             <!-- TODO: Replace with actual paper title -->
             <h5>FAQ & Usage Notes</h5>
