add back-link to ds.html in ds_map files

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ behavior of intelligent systems.">
           <i class="fas fa-external-link-alt"></i>
         </a>
         <!-- TODO: Replace with your lab's related works -->
-        <a href="https://ieeexplore.ieee.org/document/9786448" class="work-item" target="_blank">
+        <a href="ds_map/ds.html" class="work-item" target="_blank">
           <div class="work-info">
             <!-- TODO: Replace with actual paper title -->
             <h5>Death Stranding Geometry</h5>
