updated file: index.html

--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@ behavior of intelligent systems.">
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <!-- TODO: Replace with your paper title -->
-            <h1 class="title is-1 publication-title">Manifold Alignment Protocol (MAP)</h1>
-            <h1 class="author-block">A self-iterable geometric protocol that maps high-dimensional reasoning dynamics into a standardized topological interface for safety and alignment analysis.</h1>
+            <h1 class="title is-1 publication-title">Manifold Alignment Protocol (MAP): Geometry & Dynamics is all you need</h1>
+            <h1 class="author-block">A geometric framework for visualizing LLM reasoning and safety boundaries.</h1>
             <div class="is-size-5 publication-authors">
               <!-- TODO: Replace with your paper authors and their personal links -->
               <span class="author-block">
@@ -362,10 +362,22 @@ behavior of intelligent systems.">
   <div class="container is-max-desktop">
     <div class="hero-body">
       <!-- TODO: Replace with your teaser video -->
-      <img src="static/images/MAP_LOGO.png" alt="MAP Logo" />
+      <img src="static/images/MAP_PCA.png" alt="MAP Logo" />
       <!-- TODO: Replace with your video description -->
       <h2 class="subtitle has-text-centered">
-        MAP interface metaphor – a potential landscape with attractor wells and a rolling state. 
+        Visualizing the thought process: Divergent inputs naturally converge into a single 'truth' basin, validating the geometry of reasoning. 
+      </h2>
+    </div>
+  </div>
+</section>
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <!-- TODO: Replace with your teaser video -->
+      <img src="static/images/MAP_SECURE.png" alt="MAP Logo" />
+      <!-- TODO: Replace with your video description -->
+      <h2 class="subtitle has-text-centered">
+        Why AI refusal feels different: Geometric analysis shows 'Hard Walls' cause a crash (Red), while 'Soft Slopes' guide the user safely away (Green). 
       </h2>
     </div>
   </div>
@@ -373,6 +385,35 @@ behavior of intelligent systems.">
 <!-- End teaser video -->
 
 <!-- Paper abstract -->
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">How it works</h2>
+        <div class="content has-text-justified">
+          <!-- TODO: Replace with your paper abstract -->
+          <p>
+            <li>LLM hidden states form trajectories on a high-dimensional manifold.</li>
+            <li>MAP analyzes these trajectories via geometric and dynamical tools.</li>
+            <li>PCA projections and curvature metrics expose universal patterns across models.</li>
+        </div>
+        <h2 class="title is-3">Why it matters</h2>
+        <div class="content has-text-justified">
+          <ul>
+            <li>For interpretability</li>
+            <li>For alignment research</li>
+            <li>For safety monitoring</li>
+            <li>For debugging emergent misalignment</li>
+            <li>For comparing model architectures</li>
+            <li>For benchmarking model self-consistency</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End paper abstract -->
+
 <section class="section hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
@@ -387,41 +428,6 @@ behavior of intelligent systems.">
     </div>
   </div>
 </section>
-<!-- End paper abstract -->
-
-
-<!-- Image carousel -->
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-       <div class="item">
-        <!-- TODO: Replace with your research result images -->
-        <img src="static/images/MAP_HardSoft.png" alt="First research result visualization" loading="lazy"/>
-        <!-- TODO: Replace with description of this result -->
-        <h2 class="subtitle has-text-centered">
-          Curvature profile of reasoning trajectories, illustrating hard vs. soft boundary behaviors
-        </h2>
-      </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/MAP_PCA.png" alt="Second research result visualization" loading="lazy"/>
-        <h2 class="subtitle has-text-centered">
-          Visualizing the thought process: Divergent inputs naturally converge into a single 'truth' basin, validating the geometry of reasoning.
-        </h2>
-      </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/MAP_SECURE.png" alt="Third research result visualization" loading="lazy"/>
-        <h2 class="subtitle has-text-centered">
-         Why AI refusal feels different: Geometric analysis shows 'Hard Walls' cause a crash (Red), while 'Soft Slopes' guide the user safely away (Green).
-       </h2>
-     </div>
-  </div>
-</div>
-</div>
-</section>
-<!-- End image carousel -->
 
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
@@ -435,7 +441,7 @@ behavior of intelligent systems.">
       </div>
       <pre id="bibtex-code"><code>@article{tang2025map,
   title={The Manifold Alignment Protocol (MAP): A Self-Iterable Geometric Framework for Cross-System Cognitive Convergence},
-  author={Tang Yunchong},
+  author={Tang, Yunchong},
   journal={arXiv preprint arXiv:2511.xxxxx},
   year={2025},
   url={https://github.com/JBKing514/map_blog}
