modified:   README.md 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ behavior of intelligent systems.">
       <img src="static/images/MAP_SECURE.png" alt="MAP Logo" />
       <!-- TODO: Replace with your video description -->
       <h2 class="subtitle has-text-centered">
-        Why AI refusal feels different: Geometric analysis shows 'Hard Walls' cause a crash (Red), while 'Soft Slopes' guide the user safely away (Green). 
+        MAP reveals the hidden geometry of AI safety: Adaptive Mode (guidance) shows a stable U-turn that redirects the reasoning path away from danger, while Rigid Mode (hard refusal) exhibits an inelastic crash into a boundary and ends immediately. 
       </h2>
     </div>
   </div>
