added experiment for layer-wise alignment analysis

--- a/index.html
+++ b/index.html
@@ -382,6 +382,18 @@ behavior of intelligent systems.">
     </div>
   </div>
 </section>
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <!-- TODO: Replace with your teaser video -->
+      <img src="static/images/MAP_ALINE.png" alt="MAP Logo" />
+      <!-- TODO: Replace with your video description -->
+      <h2 class="subtitle has-text-centered">
+        MAP metric Delta A reveals distinct cognitive styles. Llama-3 discriminates semantics early (Layer 5), while Qwen-2.5 maintains a high-abstraction 'superposition' state until deep layers (Layer 20), correlating with its reasoning-heavy architecture. 
+      </h2>
+    </div>
+  </div>
+</section>
 <!-- End teaser video -->
 
 <!-- Paper abstract -->
