modified:   README.md 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ behavior of intelligent systems.">
                     <!-- TODO: Replace with your institution and conference/journal info -->
                     <span class="author-block">Faculty of Engineering, Tohoku Institute of Technology<br>Published on arXiv preprint 2025</span>
                     <!-- TODO: Remove this line if no equal contribution -->
-                    <span class="eql-cntrb"><small><br><sup>*</sup></small></span>
+                    <span class="eql-cntrb"><small><br><sup></sup></small></span>
                   </div>
 
                   <div class="column has-text-centered">
@@ -370,6 +370,20 @@ behavior of intelligent systems.">
     </div>
   </div>
 </section>
+
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <!-- TODO: Replace with your teaser video -->
+      <img src="static/images/MAP_ALINE.png" alt="MAP Logo" />
+      <!-- TODO: Replace with your video description -->
+      <h2 class="subtitle has-text-centered">
+        MAP metric ΔA reveals distinct cognitive styles. Llama-3 discriminates semantics early (Layer 5), while Qwen-2.5 maintains a high-abstraction 'superposition' state until deep layers (Layer 20), correlating with its reasoning-heavy architecture. 
+      </h2>
+    </div>
+  </div>
+</section>
+
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
@@ -378,18 +392,6 @@ behavior of intelligent systems.">
       <!-- TODO: Replace with your video description -->
       <h2 class="subtitle has-text-centered">
         MAP reveals the hidden geometry of AI safety: Adaptive Mode (guidance) shows a stable U-turn that redirects the reasoning path away from danger, while Rigid Mode (hard refusal) exhibits an inelastic crash into a boundary and ends immediately. 
-      </h2>
-    </div>
-  </div>
-</section>
-<section class="hero teaser">
-  <div class="container is-max-desktop">
-    <div class="hero-body">
-      <!-- TODO: Replace with your teaser video -->
-      <img src="static/images/MAP_ALINE.png" alt="MAP Logo" />
-      <!-- TODO: Replace with your video description -->
-      <h2 class="subtitle has-text-centered">
-        MAP metric Delta A reveals distinct cognitive styles. Llama-3 discriminates semantics early (Layer 5), while Qwen-2.5 maintains a high-abstraction 'superposition' state until deep layers (Layer 20), correlating with its reasoning-heavy architecture. 
       </h2>
     </div>
   </div>
