--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ behavior of intelligent systems.">
           <div class="column has-text-centered">
             <!-- TODO: Replace with your paper title -->
             <h1 class="title is-1 publication-title">Manifold Alignment Protocol (MAP): Geometry & Dynamics is all you need</h1>
-            <h1 class="author-block">A geometric framework for visualizing LLM reasoning and safety boundaries.</h1>
+            <h1 class="author-block">A geometric framework for visualizing Latent Dynamics and safety boundaries.</h1>
             <div class="is-size-5 publication-authors">
               <!-- TODO: Replace with your paper authors and their personal links -->
               <span class="author-block">
@@ -334,7 +334,7 @@ behavior of intelligent systems.">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code</span>
+                    <span>Main Repo</span>
                   </a>
                 </span>
 
@@ -439,6 +439,63 @@ behavior of intelligent systems.">
             MAP unifies cognitive alignment through geometry. By treating reasoning as stochastic diffusion on a representational manifold, the protocol provides a standardized interface to visualize how diverse systems converge on shared concepts. We validate this framework using LLM hidden-state trajectories, revealing that semantic consensus manifests as geometric attractors and safety boundaries appear as high-curvature topological features. This architecture offers a scalable, "lossless" bridge for cross-disciplinary and human-AI communication.
         </div>
       </div>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">MAP Ecosystem</h2>
+        <div class="content has-text-justified">
+          <p>
+            The protocol is designed to be substrate-independent. We provide official implementations for both discrete (Language) and continuous (Diffusion) cognitive systems:
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="columns is-centered is-multiline">
+      
+      <div class="column is-half">
+        <div class="box has-text-centered" style="height: 100%;">
+          <span class="icon is-large" style="font-size: 3rem; margin-bottom: 1rem;">💻</span>
+          <h3 class="title is-4">MAP-LLM-Toolkit</h3>
+          <p class="tag is-info is-light">For Researchers & Analysts</p>
+          <div class="content mt-3">
+            <p>
+              A Python API for extracting and visualizing reasoning trajectories in <strong>discrete semantic spaces</strong> (Llama, Qwen, etc.).
+            </p>
+          </div>
+          <a href="https://github.com/JBKing514/map_llm_toolkit" class="button is-dark is-rounded is-small">
+            <span class="icon">
+                <i class="fab fa-github"></i>
+            </span>
+            <span>View Toolkit</span>
+          </a>
+        </div>
+      </div>
+
+      <div class="column is-half">
+        <div class="box has-text-centered" style="height: 100%;">
+          <span class="icon is-large" style="font-size: 3rem; margin-bottom: 1rem;">🎨</span>
+          <h3 class="title is-4">MAP-ComfyUI</h3>
+          <p class="tag is-warning is-light">For Artists & Engineers</p>
+          <div class="content mt-3">
+            <p>
+              A custom ComfyUI node for geometric auto-tuning and trajectory plotting in <strong>continuous latent spaces</strong> (Stable Diffusion).
+            </p>
+          </div>
+          <a href="https://github.com/JBKing514/map_comfyui" class="button is-dark is-rounded is-small">
+            <span class="icon">
+                <i class="fab fa-github"></i>
+            </span>
+            <span>View Node</span>
+          </a>
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
