Update the citation information for the MAP paper to reflect its publication on Zenodo.

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ behavior of intelligent systems.">
 
                   <div class="is-size-5 publication-authors">
                     <!-- TODO: Replace with your institution and conference/journal info -->
-                    <span class="author-block">Faculty of Engineering, Tohoku Institute of Technology<br>Published on arXiv preprint 2025</span>
+                    <span class="author-block">Faculty of Engineering, Tohoku Institute of Technology<br>Published on Zenodo preprint 2025</span>
                     <!-- TODO: Remove this line if no equal contribution -->
                     <span class="eql-cntrb"><small><br><sup></sup></small></span>
                   </div>
@@ -513,9 +513,10 @@ behavior of intelligent systems.">
       <pre id="bibtex-code"><code>@article{tang2025map,
   title={The Manifold Alignment Protocol (MAP): A Self-Iterable Geometric Framework for Cross-System Cognitive Convergence},
   author={Tang, Yunchong},
-  journal={arXiv preprint arXiv:2511.xxxxx},
+  journal={Zenodo},
   year={2025},
-  url={https://github.com/JBKing514/map_blog}
+  doi={10.5281/zenodo.17900444},
+  url={https://doi.org/10.5281/zenodo.17900444}
 }</code></pre>
     </div>
 </section>
