Add a disclaimer and update some links

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               In an era of emergent AI and complex physical systems, reductionism fails. We cannot understand a Large Language Model or a chaotic RF environment by dismantling it gear by gear.
             </p>
             <p>
-              <strong>MAP proposes a Cybernetic alternative:</strong> accepting the "Black Box" (L1) as is, and focusing on characterizing its behavioral geometry. MAP asserts that any complex optimization process can be understood as a trajectory moving through a state space. The goal of the protocol is to project these invisible trajectories onto a visible interface, allowing human operators to <strong>steer</strong> the system towards desired outcomes without needing to reverse-engineer the substrate.
+              <strong>MAP proposes a Cybernetic alternative:</strong> accepting the "Black Box" (L1) as is, and focusing on characterizing its behavioral geometry. MAP asserts that any complex optimization process can be understood as a trajectory moving through a state space. The goal of the protocol is to project these invisible trajectories onto a visible interface, allowing human operators to <strong>steer</strong> the system towards desired outcomes without needing to reverse-engineer the substrate. MAP is offered as a complementary lens to existing mechanistic studies, focusing on steerability and holistic dynamics.
             </p>
           </div>
         </div>
