update all ds_map files with live MAP Protocol link

--- a/ds_map/ds-101.html
+++ b/ds_map/ds-101.html
@@ -225,7 +225,7 @@
     <p>But you need to know: <strong>The Beach is the Operating System of our reality.</strong> And someone is trying to format the drive.</p>
     <p>If you want to understand the Beach, don’t look to Bridges.<br>
     Look to the geometry.</p>
-    <p>The <strong><a href="ds.html">Manifold Alignment Protocol (MAP)</a></strong> is the only surviving record of how our worlds were stitched together—before the stitching began to tear.</p>
+    <p>The <strong><a href="https://jbking514.github.io/map_blog/">Manifold Alignment Protocol (MAP)</a></strong> is the only surviving record of how our worlds were stitched together—before the stitching began to tear.</p>
 
     <div class="footer">
         <div class="signature">-- The Architect</div>
