--- a/ds_map/ds-204.html
+++ b/ds_map/ds-204.html
@@ -227,7 +227,7 @@
 
     <h3>5. Protocol Override</h3>
     <p>If you want to understand how to stabilize these connections without tearing reality apart, stop listening to the UCA hologram.<br>
-    Read the <strong><a href="[YOUR_ARXIV_LINK]">MAP Protocol</a></strong>.</p>
+    Read the <strong><a href="https://jbking514.github.io/map_blog/">MAP Protocol</a></strong>.</p>
     <p>We need to move from <strong>"Forced Alignment" (Q-pid)</strong> to <strong>"Adaptive Alignment"</strong>. We need to stop punching holes and start building slopes.</p>
 
     <div class="footer">
