--- a/ds_map/ds-404.html
+++ b/ds_map/ds-404.html
@@ -186,7 +186,7 @@
     It is what happens when the universe attempts to divide by zero.</p>
 
     <h3>2. Anatomy of a Crash (MAP Analysis)</h3>
-    <p>Under the <strong><a href="[YOUR_ARXIV_LINK]">Manifold Alignment Protocol</a></strong>, reality (L0) and the Beach (L1) are distinct manifolds with opposite <strong>Chirality (Handedness)</strong>.</p>
+    <p>Under the <strong><a href="https://jbking514.github.io/map_blog/">Manifold Alignment Protocol</a></strong>, reality (L0) and the Beach (L1) are distinct manifolds with opposite <strong>Chirality (Handedness)</strong>.</p>
     <ul>
         <li><strong>Life:</strong> Right-handed geometry ($+g$).</li>
         <li><strong>Death:</strong> Left-handed geometry ($-g$).</li>
