--- a/ds_map/ds.html
+++ b/ds_map/ds.html
@@ -218,8 +218,8 @@
             If you want to understand the truth, you need a new map."</p>
             
             <div class="signature">
-                <a href="[YOUR_ARXIV_LINK]" style="color:var(--chiral-gold); text-decoration:none;">
-                    >> ACCESS THE MAP PROTOCOL (arXiv)
+                <a href="https://jbking514.github.io/map_blog/" style="color:var(--chiral-gold); text-decoration:none;">
+                    >> ACCESS THE MAP PROTOCOL
                 </a>
             </div>
         </div>
